# sklearn-ragger-duck

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  LICENSE  README.md  about.html  environment.yml  genindex.html  index.html  install.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sg_execution_times.html  user_guide.html  whats_new.html
.github/workflows/: deploy-gh-pages.yml  python-app.yml
_downloads/83e167b8af1bf8554e4136d426f034c5/: plot_documentation_scraping.py
_downloads/ee7e3ae92106ee3d2ba37fd6f6bea128/: plot_documentation_scraping.ipynb
_sources/: about.rst.txt  index.rst.txt  install.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt  whats_new.rst.txt
_sources/auto_examples/: index.rst.txt  plot_documentation_scraping.rst.txt  sg_execution_times.rst.txt
_sources/references/: embedding.rst.txt  index.rst.txt  prompt.rst.txt  retrieval.rst.txt  scraping.rst.txt
_sources/user_guide/: index.rst.txt  information_retrieval.rst.txt  large_language_model.rst.txt  text_scraping.rst.txt
_static/css/: ragger_duck.css
app/: Makefile  main.py  resources.py  schemas.py
app/configuration/: default.py
app/static/css/: site.css
app/static/js/: llama-tokenizer.js
app/templates/: index.html  inference.js
auto_examples/: index.html  plot_documentation_scraping.html  sg_execution_times.html
build_scripts/: linux-64-cpu-activate.sh  margaret-activate.sh  osx-arm64-activate.sh
doc/: conf.py  index.rst  install.rst  user_guide.rst  whats_new.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_static/: documentation_options.js
doc/_static/css/: ragger_duck.css
doc/auto_examples/: index.rst
doc/references/: index.rst  prompt.rst  retrieval.rst  scraping.rst
doc/user_guide/: index.rst  information_retrieval.rst  large_language_model.rst  text_scraping.rst
doc/whats_new/: v0.1.rst
examples/: README.txt  plot_documentation_scraping.py
examples/toy_documentation/api/: sklearn.ensemble.RandomForestClassifier.html
examples/toy_documentation/gallery/: example_pca_vs_lda.py
examples/toy_documentation/user_guide/: getting_started.html
models/: README.md
notebooks/: Untitled.ipynb
rag/embedding/tests/: test_sentence_transformer.py
rag/embedding/tests/data/sentence-transformers_paraphrase-albert-small-v2/: tokenizer_config.json
rag/prompt/: __init__.py
rag/retrieval/: __init__.py  _reranking.py  _semantic.py
rag/retrieval/tests/: test_lexical.py  test_reranking.py  test_semantic.py
rag/scraping/tests/: test_api_doc.py
rag_based_llm/embedding/: __init__.py  _sentence_transformer.py
rag_based_llm/embedding/tests/: test_sentence_transformer.py
rag_based_llm/embedding/tests/data/sentence-transformers_paraphrase-albert-small-v2/: README.md  tokenizer.json
rag_based_llm/prompt/: __init__.py  _agent.py
rag_based_llm/retrieval/: __init__.py  _lexical.py  _reranking.py  _semantic.py
rag_based_llm/retrieval/tests/: test_lexical.py  test_reranking.py  test_semantic.py
rag_based_llm/scraping/: __init__.py  _api_doc.py
rag_based_llm/scraping/tests/: test_api_doc.py
rag_based_llm/scraping/tests/data/api_doc/: sklearn.base.is_classifier.html
ragger_duck/embedding/: __init__.py  _sentence_transformer.py
ragger_duck/embedding/tests/: test_sentence_transformer.py
ragger_duck/embedding/tests/data/sentence-transformers_paraphrase-albert-small-v2/: README.md  config_sentence_transformers.json  sentence_bert_config.json  special_tokens_map.json  tokenizer.json
ragger_duck/embedding/tests/data/sentence-transformers_paraphrase-albert-small-v2/1_Pooling/: config.json
ragger_duck/prompt/: __init__.py  _agent.py  _api.py  _basic.py  _merge.py
ragger_duck/prompt/tests/: test_basic.py
ragger_duck/retrieval/: _lexical.py  _reranking.py  _semantic.py
ragger_duck/retrieval/tests/: test_lexical.py  test_reranking.py  test_semantic.py
ragger_duck/scraping/: __init__.py  _api_doc.py  _example_gallery.py  _shared.py  _user_guide.py
ragger_duck/scraping/tests/: test_api_doc.py  test_example_gallery.py  test_shared.py  test_user_guide.py
ragger_duck/scraping/tests/data/api_doc/: sklearn.base.BaseEstimator.html  sklearn.base.is_classifier.html
ragger_duck/scraping/tests/data/gallery/stable/: plot_tree_regression.py
ragger_duck/scraping/tests/data/numpydoc_docscrape/: sklearn.ensemble.RandomForestClassifier.html  sklearn.feature_extraction.image.extract_patches_2d.html
ragger_duck/scraping/tests/data/user_guide_doc/: calibration.html  clustering.html
references/: embedding.html  index.html  prompt.html  retrieval.html  scraping.html
scripts/: configuration.py  exp.py  train_retriever.py  train_retrievers.py
sphinx_rag_search_engine/embedding/: __init__.py  _sentence_transformer.py
sphinx_rag_search_engine/embedding/tests/: test_sentence_transformer.py
sphinx_rag_search_engine/embedding/tests/data/sentence-transformers_paraphrase-albert-small-v2/: config.json  sentence_bert_config.json  tokenizer_config.json
sphinx_rag_search_engine/prompt/: _agent.py
sphinx_rag_search_engine/retrieval/: __init__.py  _faiss.py  _semantic.py
sphinx_rag_search_engine/retrieval/tests/: test_faiss.py  test_semantic.py
sphinx_rag_search_engine/scraping/: __init__.py  _api_doc.py
sphinx_rag_search_engine/scraping/tests/: test_api_doc.py
sphinx_rag_search_engine/scraping/tests/data/api_doc/: sklearn.base.BaseEstimator.html
user_guide/: index.html  information_retrieval.html  large_language_model.html  text_scraping.html
whats_new/: v0.1.html
