[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "ragger-duck"
version = "0.0.1.dev0"
authors = [
  { name="Guillaume Lemaitre", email="g.lemaitre58@gmail.com" },
]
description = "Ragger Duck is a RAG for the scikit-learn documentation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/glemaitre/sklearn-ragger-duck"
Issues = "https://github.com/glemaitre/sklearn-ragger-duck/issues"

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''

[tool.ruff]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]

# max line length for black
line-length = 88
target-version = "py38"

exclude=[
    ".git",
    "__pycache__",
    "doc/_build",
]

[tool.ruff.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"scripts/*"=["E402"]
"doc/conf.py"=["E402"]
"examples/*"=["E402"]
"app/main.py"=["E402"]
"ragger_duck/scraping/tests/data/gallery/stable/*.py"=["E402"]
